--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
     "wrangler": "^3.95.0"
+  },
+  "dependencies": {
+    "three-js": "^79.0.0",
+    "three.js": "^0.77.1"
   }
 }
