--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Owyn Richen"]
 readme = "README.md"
-packages = [{include = "owynrichen"}]
+package-mode = false
 
 
 [tool.poetry.dependencies]
