--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.11"
 pelican = {extras = ["markdown"], version = "^4.10.2"}
+pygments = "^2.19.1"
+markdown-mermaidjs = "^1.0.0"
 
 
 [build-system]
