--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "esbuild": "0.25.1",
     "esbuild-sass-plugin": "^3.3.1",
     "gsap": "^3.12.7",
+    "svgo": "^3.3.2",
     "three": "^0.174.0"
   },
   "devDependencies": {
